objects/nSBA__Unavailable_Credit_Information__c.object
<CustomObject>
    <description>Contains information about why the the credit information was unavailable and each instance is associated to an application.</description>
    <fields>
        <fullName>nSBA__Associated_Loan_Application__c</fullName>
        <description>The Loan Application for which credit was unavailable.</description>
        <inlineHelpText>The Loan Application for which credit was unavailable.</inlineHelpText>
        <label>Associated Loan Application</label>
        <referenceTo>LLC_BI__Application__c</referenceTo>
        <relationshipLabel>Unavailable Credit Information</relationshipLabel>
        <relationshipName>Unavailable_Credit_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nSBA__Reason_Code__c</fullName>
        <description>Identifies the reason why credit was unavailable.</description>
        <inlineHelpText>Identifies the reason why credit was unavailable.</inlineHelpText>
        <label>Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Reason_Comment__c</fullName>
        <description>Comment explaining why credit is unavailable.</description>
        <inlineHelpText>Comment explaining why credit is unavailable.</inlineHelpText>
        <label>Reason Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Unavailable Credit Information</label>
    <nameField>
        <label>Unavailable Credit Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unavailable Credit Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>nSBA__Require_Reason_If_Reason_Code_is_Five</fullName>
        <active>true</active>
        <description>If the Reason Code is Five then the comment as to why the credit was unavailable must be populated.</description>
        <errorConditionFormula>AND(ISBLANK( nSBA__Reason_Comment__c)) &amp;&amp;   ISPICKVAL( nSBA__Reason_Code__c , &apos;5&apos;)</errorConditionFormula>
        <errorMessage>Reason Comment must be populated if Reason Code is 5</errorMessage>
    </validationRules>
</CustomObject>